tests/NormalTests/paczka1/fuzzy1/91042101.err
Error in line 1: kDxQE4 A621 20,7
Error in line 4: 2PGy33sKs A621 93,9
Error in line 12: PhmPpBR A621 85,9
Error in line 21: HaocSdzWv A282 78,1
Error in line 22: S691 A621 57,0
Error in line 24: S691 A282 92,1
Error in line 6: UDEQH338EOt A612 62,8
